# skislope-kiro

./: .eslintrc.cjs  .gitignore  .semgrepignore  README.md  README_AGENTS.md  TEST_SCRIPTS_GUIDE.md  VITEST_CONFIGURATION.md  agent-messages.txt  console-messages.txt  debug-agent-call.js  debug_dem_validation.py  debug_validation.py  index.html  integration-errors.txt  lefthook.yml  logging.yaml  package-lock.json  package.json  pyproject.toml  ruff.toml  start_simple.py  terrain-errors.txt  test.config.js  test.env  test_agent_direct.py  test_full_terrain_pipeline.py  test_results.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.integration.config.ts
.github/workflows/: integration-tests.yml
.kiro/steering/: development-workflow.md  product.md  structure.md  task-completion-rules.md  tech.md
agents/: __init__.py
agents/equipment/: __init__.py  equipment_service.py  models.py  server.py
agents/hill_metrics/: __init__.py  data_sources.py  models.py  server.py  terrain_processor.py
agents/monitoring/: __init__.py  dashboard.py  health_checker.py
agents/shared/: __init__.py  jsonrpc.py  logging_config.py  mcp.py  monitoring.py  utils.py
agents/tests/: __init__.py  test_data_sources.py  test_dem_validation_fix.py  test_equipment.py  test_hill_metrics.py  test_integration.py  test_terrain_processor_integration.py  test_weather.py
agents/weather/: __init__.py  models.py  server.py  weather_service.py
docs/: BROWSER_API_MOCK_FIXES_SUMMARY.md  CI_CD_INTEGRATION.md  CI_CD_QUICK_START.md  COMPREHENSIVE_TESTING_GUIDE.md  COMPREHENSIVE_TESTING_TROUBLESHOOTING.md  FRONTEND_TEST_ASYNC_PATTERNS.md  FRONTEND_TEST_ENVIRONMENT.md  FRONTEND_TEST_MOCK_PATTERNS.md  FRONTEND_TEST_SCRIPTS_GUIDE.md  FRONTEND_TEST_TROUBLESHOOTING.md  TASK_13_VERIFICATION_RESULTS.md  TESTING_ARCHITECTURE_CHANGES.md  openapi_opentopography_api_spec.json
scripts/: check_task_ready.sh  collect_test_artifacts.py  deployment_smoke_tests.py  setup_ci_cd.sh  start_agents.py  test-runner.js  test_agents.py  test_integration.py  validate-test-env.js
src/: App.css  App.tsx  index.css
src/components/: index.ts
(+143 files in other folders)
